# vma-external

./: LICENSE  MATCHING_FUNCTIONS_EXPLAINED.md  README.md  SCX_PREFILL_ANALYSIS.md  TOKENIZER_CHECK.md  analyze_results.py  analyze_sentence_results.py  attack_evaluation_results.json  collect_high_quality_sentences.py  convert_llama7b.sh  convert_llama7b_to_safetensors.py  error_calculation_comparison.md  evaluate_attack_results.py  filter_high_score_sentences.py  high_quality_sentences.json  high_score_sentences.json  kv_attack_config_no_perm.json  kv_attack_config_no_perm—2.json  kv_attack_config_with_perm-2.json  kv_attack_config_with_perm.json  kv_attack_results_llama3-8B_no_perm_layer0.json  kv_attack_results_llama3-8B_no_perm_layer0_sentences.json  kv_attack_results_llama3-8B_no_perm_layer16.json  kv_attack_results_llama3-8B_no_perm_layer16_sentences.json  kv_attack_results_llama3-8B_no_perm_layer31.json  kv_attack_results_llama3-8B_no_perm_layer31_sentences.json  kv_attack_results_llama3-8B_with_perm_layer0.json  kv_attack_results_llama3-8B_with_perm_layer0_sentences.json  kv_attack_results_llama3-8B_with_perm_layer16.json  kv_attack_results_llama3-8B_with_perm_layer16_sentences.json  kv_attack_results_llama3-8B_with_perm_layer31.json  kv_attack_results_llama3-8B_with_perm_layer31_sentences.json  kv_attack_results_llama3.2-1B_no_perm.json  kv_attack_results_llama3.2-1B_no_perm_layer15.json  kv_attack_results_llama3.2-1B_no_perm_layer15_sentences.json  kv_attack_results_llama3.2-1B_no_perm_layer8.json  kv_attack_results_llama3.2-1B_no_perm_layer8_sentences.json  (+42 more)
(+18 files in other folders)
